# Creador_de_graficos

./: README.md  demo_barras_vertical.twb  demo_kpi.twb  demo_lazo.twb  test_quick.py
assets/vega/: README.txt
chart_maker/: README.md  pyproject.toml  requirements.txt
chart_maker/app/: main.py
chart_maker/app/ui/: main_window.py  preview_web_view.py  preview_web_view_local.py  preview_webview.py
chart_maker/core/: chart_types.py  datasets.py  examples.py  examples_new.py  spec.py  transform.py  validate.py  vegalite_mapper.py
chart_maker/exporters/: __init__.py  base.py
chart_maker/exporters/looker/: exporter.py
chart_maker/exporters/looker_studio/: exporter.py
chart_maker/exporters/powerbi_pbiviz/: exporter.py
chart_maker/exporters/powerbi_python/: __init__.py  exporter.py  exporter_new.py  exporter_new_old.py  exporter_project.py
chart_maker/exporters/tableau/: exporter.py  exporter_new.py
chart_maker/packaging/: pbiviz_cli.py  zip_utils.py
demo_barras_vertical_PowerBI_Project/: .gitignore  README.md  package.json  pbiviz.json
demo_barras_vertical_PowerBI_Project/src/: visual.ts
demo_barras_vertical_PowerBI_Project/style/: visual.less
demo_kpi_PowerBI_Project/: README.md  capabilities.json  package.json  pbiviz.json  tsconfig.json
demo_kpi_PowerBI_Project/src/: visual.ts
demo_lazo_PowerBI_Project/: README.md  package.json  pbiviz.json
demo_lazo_PowerBI_Project/src/: visual.ts
pasos_a_paso/: desarrollo_completo_pasos.md
